resym_core/tests/snapshots/type_reconstruction__type_reconstruction_portable_access_specifiers-3.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---

struct resym_test::BitFieldsTest2 { /* Size=0x2 */
  /* 0x0000 */ public: unsigned char b1 : 3;
  union {
    /* 0x0001 */ public: unsigned char b2 : 6;
    /* 0x0001 */ public: unsigned char b3 : 2;
  };
};

