resym_core/tests/snapshots/type_reconstruction__type_reconstruction_portable_access_specifiers-4.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---

union resym_test::UnionTest { /* Size=0x8 */
  /* 0x0000 */ public: unsigned char u1;
  /* 0x0000 */ public: uint16_t u2;
  /* 0x0000 */ public: uint32_t u3;
  /* 0x0000 */ public: uint64_t u4;
  public: static uint64_t su5;
  
  public: UnionTest();
  public: ~UnionTest();
  public: void* GetPtr();
  public: void* ConstMethod() const;
  public: void* VolatileMethod() volatile;
  public: void* ConstVolatileMethod() const volatile;
  public: void (*ReturnFuncPointerMethod())(int32_t);
  public: void* __vecDelDtor(uint32_t);
  
  public: static int32_t Magic();
  public: static int32_t MagicVar1(...);
  public: static int32_t MagicVar2(int32_t, ...);
};

