resym_core/tests/snapshots/type_reconstruction__type_reconstruction_portable_access_specifiers-5.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---

struct resym_test::StructTest { /* Size=0x18 */
  /* 0x0008 */ public: unsigned char u1;
  /* 0x000a */ public: uint16_t u2;
  /* 0x000c */ public: uint32_t u3;
  /* 0x0010 */ public: uint64_t u4;
  public: static uint64_t su5;
  
  public: StructTest(const resym_test::StructTest&);
  public: StructTest();
  public: ~StructTest();
  public: void* GetPtr();
  public: void* ConstMethod() const;
  public: void* VolatileMethod() volatile;
  public: void* ConstVolatileMethod() const volatile;
  public: void (*ReturnFuncPointerMethod())(int32_t);
  public: virtual int32_t Virtual();
  public: resym_test::StructTest& operator=(const resym_test::StructTest&);
  public: void* __vecDelDtor(uint32_t);
  
  public: static int32_t Magic();
  public: static int32_t MagicVar1(...);
  public: static int32_t MagicVar2(int32_t, ...);
};

