resym_core/tests/snapshots/type_reconstruction__type_reconstruction_raw_access_specifiers-0.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---

struct resym_test::PrimitiveTypesTest { /* Size=0x70 */
  /* 0x0000 */ public: bool b1;
  /* 0x0001 */ public: char c1;
  /* 0x0002 */ public: unsigned char c2;
  /* 0x0004 */ public: char16_t c4;
  /* 0x0008 */ public: char32_t c5;
  /* 0x000c */ public: wchar_t w1;
  /* 0x000e */ public: unsigned short i1;
  /* 0x0010 */ public: short i2;
  /* 0x0014 */ public: unsigned long i3;
  /* 0x0018 */ public: long i4;
  /* 0x001c */ public: unsigned long i5;
  /* 0x0020 */ public: long i6;
  /* 0x0028 */ public: unsigned __int64 i7;
  /* 0x0030 */ public: __int64 i8;
  /* 0x0038 */ public: unsigned __int64 i9;
  /* 0x0040 */ public: __int64 i10;
  /* 0x0048 */ public: float f1;
  /* 0x0050 */ public: double f2;
  /* 0x0058 */ public: double f3;
  /* 0x0060 */ public: double f4;
  /* 0x0068 */ public: long hres;
};

